[metadata]
name = stwcs
version = 1.2.1.dev
author = Nadia Dencheva, Warren Hack
author-email = help@stsci.edu
summary = Recomputes the WCS of an HST observation and puts all distortion
	corrections in the headers
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.6
requires-dist =
	stsci.tools
	astropy(>=0.3.1)

[files]
packages_root = lib
packages =
	stwcs
	stwcs.distortion
	stwcs.updatewcs
	stwcs.wcsutil
	stwcs.gui
data_files =
	stwcs/gui = lib/stwcs/gui/*.help
	stwcs/gui/pars = lib/stwcs/gui/pars/*
	stwcs/gui/htmlhelp = lib/stwcs/gui/htmlhelp/*

[install_data]
pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[global]
setup_hooks =
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook
	stsci.distutils.hooks.use_packages_root

