[metadata]
package_name = stwcs
description = Computes the WCS of HST images.
long_description = Recomputes and records the WCS of an HST imaging observation (including distortion) in the file.
author = STScI
author_email = help@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/stwcs

[pytest]
minversion = 2.2
norecursedirs = build docs/_build relic

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
