[metadata]
package_name = stwcs
description = Computes the WCS of HST images.
long_description = Recomputes and records the WCS of an HST imaging observation (including distortion) in the file.
author = STScI
author_email = help@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/stwcs

[tool:pytest]
minversion = 3.9
norecursedirs = build docs/_build relic
filterwarnings=
  ignore:.*Card is too long*
  ignore:.*Some non-standard WCS keywords*
  ignore:.*The WCS transformation has more axes*
  ignore:.*Keyword name 'IDCSCALE*


[build_sphinx]
builder = html
warning-is-error = 1

[flake8]
# E402, E501, E722 should be added back to the selection list
# once they are made to pass.
select = F, W, E101, E111, E112, E113, E401, E711
# At time of writing, (2020-12-23) the following checks are failing
# in master:
ignore = F401, F523, F524, F541, F821, F841, W292, W391, W504, W605
# We should set max line length to 88 eventually
max-line-length = 110
exclude = .git, __pycache__, doc, build, dist, .tox, .eggs

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=0
